# Lampion

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  output.txt  prep.py  requirements.txt
Transformers/Python/: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  rc.config  requirements.txt  setup.cfg
Transformers/Python/lampion/: __main__.py  cli.py
Transformers/Python/lampion/components/: engine.py
Transformers/Python/lampion/transformers/: addcomment.py  addneutral.py  addvar.py  basetransformer.py  example.py  iffalseelse.py  iftrue.py  lambdaidentity.py  literal_helpers.py  renameparam.py  renamevar.py
Transformers/Python/lampion/utils/: naming.py
Transformers/Python/src/lampion/: __main__.py
Transformers/Python/src/lampion/transformers/: example.py  renamevar.py
Transformers/Python/tests/: TestNotes.md  test_cli.py  test_engine.py  test_non_project_dummies.py
Transformers/Python/tests/test_configs/: parse_booleans.properties  parse_doubles.properties  parse_ints.properties  sample.properties  test1.properties  test2.properties  test3.properties  test3.txt  test4.properties
Transformers/Python/tests/test_inputs/: hello_world.py
Transformers/Python/tests/test_inputs/buggy_and_ok_files/: goodbye_world.py
Transformers/Python/tests/test_inputs/no_files/: note.md
Transformers/Python/tests/transformers/: test_addcomment.py  test_addneutral.py  test_addvar.py  test_iffalseelse.py  test_iftrue.py  test_lambdaidentity.py  test_literal_helpers.py  test_renameparam.py  test_renamevar.py
(+354 files in other folders)
