[metadata]
name = lampion-python-transformer
version = 0.0.1
author = Leonhard Applis
author_email = L.H.Applis@tudelft.nl
description = A metamorphic transformer to change python code to more verbose / abstruse python code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ciselab/lampion/
project_urls =
    Bug Tracker = https://github.com/ciselab/lampion/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src